--- a/app/src/main/res/layout/activity_developer_list.xml
+++ b/app/src/main/res/layout/activity_developer_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#C1FFFFFF"
-    tools:context=".DevelopersList">
+    tools:context=".DeveloperListActivity">
 
     <ScrollView
         android:layout_width="match_parent"
