Updating the code file and creat a admin panel.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -5,4 +5,5 @@
     <item name="developers" type="id" />
     <item name="developers_list" type="id" />
     <item name="developers_listt" type="id" />
+    <item name="Doctor_list" type="id" />
 </resources>
